final email logic
