# app/models/feedback_response_map.rb
@@ -77,25 +77,25 @@ class FeedbackResponseMap < ResponseMap
 
   # Send emails for author feedback
   # Refactored from email method in response.rb
-  def email(defn, _participant, assignment)
-    defn[:body][:type] = 'Author Feedback'
-    # reviewee is a response, reviewer is a participant
-    # we need to track back to find the original reviewer on whose work the author comments
-    response_id_for_original_feedback = reviewed_object_id
-    response_for_original_feedback = Response.find response_id_for_original_feedback
-    response_map_for_original_feedback = ResponseMap.find response_for_original_feedback.map_id
-    original_reviewer_participant_id = response_map_for_original_feedback.reviewer_id
+#   def email(defn, _participant, assignment)
+#     defn[:body][:type] = 'Author Feedback'
+#     # reviewee is a response, reviewer is a participant
+#     # we need to track back to find the original reviewer on whose work the author comments
+#     response_id_for_original_feedback = reviewed_object_id
+#     response_for_original_feedback = Response.find response_id_for_original_feedback
+#     response_map_for_original_feedback = ResponseMap.find response_for_original_feedback.map_id
+#     original_reviewer_participant_id = response_map_for_original_feedback.reviewer_id
 
-    participant = AssignmentParticipant.find(original_reviewer_participant_id)
+#     participant = AssignmentParticipant.find(original_reviewer_participant_id)
 
-    defn[:body][:obj_name] = assignment.name
+#     defn[:body][:obj_name] = assignment.name
 
-    user = User.find(participant.user_id)
+#     user = User.find(participant.user_id)
 
-    defn[:to] = user.email
-    defn[:body][:first_name] = user.fullname
-    Mailer.sync_message(defn).deliver
-  end
+#     defn[:to] = user.email
+#     defn[:body][:first_name] = user.fullname
+#     Mailer.sync_message(defn).deliver
+#   end
 
   # def accept(visitor, defn, participant, assignment)
   #   visitor.visit_feedback_response_map(self, defn, participant, assignment)
